@@ -1,0 +1,1 @@
+<div style="text-align : center" class="bgcolor2">{MESSAGE}</div>
